--- a/App/Views/Courses/Index.cshtml
+++ b/App/Views/Courses/Index.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<App.Entities.Course>
+
 @{
     ViewData["Title"] = "Våra utbildningar";
 }
@@ -20,6 +22,19 @@
         </tr>
     </thead>
     <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td style="text-align:center;"><a asp-action="" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Ändra</a></td>
+                <td>@item.CourseNumber</td>
+                <td>@item.CourseTitle</td>
+                <td>@item.CourseDescription</td>
+                <td>@item.CourseLength</td>
+                <td>@item.CourseComplexity</td>
+                <td>@item.CourseStatus</td>
+                <th style="text-align: center;"><a asp-action="" asp-route-regNo="@item.CourseNumber"><i class="fas fa-info-circle">i</i></a></th>
+            </tr>
+        }
     </tbody>
   </table>
 
