--- a/App/Views/Courses/Index.cshtml
+++ b/App/Views/Courses/Index.cshtml
@@ -25,14 +25,16 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td style="text-align:center;"><a asp-action="" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Ändra</a></td>
+                <td style="text-align:center;">
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Ändra</a>
+                </td>
                 <td>@item.CourseNumber</td>
                 <td>@item.CourseTitle</td>
                 <td>@item.CourseDescription</td>
                 <td>@item.CourseLength</td>
                 <td>@item.CourseComplexity</td>
                 <td>@item.CourseStatus</td>
-                <th style="text-align: center;"><a asp-action="" asp-route-regNo="@item.CourseNumber"><i class="fas fa-info-circle">i</i></a></th>
+                <th style="text-align: center;"><a asp-action="Details" asp-route-CourseNo="@item.CourseNumber"><i class="fas fa-info-circle">i</i></a></th>
             </tr>
         }
     </tbody>
