--- a/App/Views/Participants/Index.cshtml
+++ b/App/Views/Participants/Index.cshtml
@@ -24,7 +24,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td style="text-align:center;"><a asp-action="" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Ändra</a></td>
+                <td style="text-align:center;"><a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Ändra</a></td>
                 <td>@item.FirstName</td>
                 <td>@item.LastName</td>
                 <td>@item.EmailAddress</td>
