--- a/App/Views/Courses/Index.cshtml
+++ b/App/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<App.Entities.Course>
+@model IEnumerable<App.Models.CourseModel>
 
 @{
     ViewData["Title"] = "Våra utbildningar";
