--- a/App/Views/Participants/Index.cshtml
+++ b/App/Views/Participants/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<App.Entities.Participant>
+@model IEnumerable<App.Models.ParticipantModel>
 
 @{
     ViewData["Title"] = "Deltagare";
