added services connecting with Api

--- a/App/Views/Courses/Details.cshtml
+++ b/App/Views/Courses/Details.cshtml
@@ -1,5 +1,6 @@
-@model App.ViewModels.CourseViewModel
+@* @model App.ViewModels.CourseViewModel *@
+@model App.Models.CourseModel
 
 <div>
-    <h1>Detta är detaljer på kursen</h1>
+    <p>Detta är detaljer på kursnummer: @Model.CourseNumber</p>
 </div>
