--- a/App/Views/Courses/Index.cshtml
+++ b/App/Views/Courses/Index.cshtml
@@ -19,6 +19,7 @@
             <th>Nivå</th>
             <th>Status</th>
             <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +35,8 @@
                 <td>@item.CourseLength</td>
                 <td>@item.CourseComplexity</td>
                 <td>@item.CourseStatus</td>
+                <th style="text-align: center;"><a asp-action="Delete" asp-route-courseNo="@item.CourseNumber"><i style="color: red;" class="fas fa-info-circle">x</i></a></th>
+                
                 <th style="text-align: center;"><a asp-action="Details" asp-route-courseNo="@item.CourseNumber"><i class="fas fa-info-circle">i</i></a></th>
             </tr>
         }
