commit with working functionality

--- a/App/Views/Participants/Create.cshtml
+++ b/App/Views/Participants/Create.cshtml
@@ -27,6 +27,11 @@
                 <span asp-validation-for="LastName"></span>
             </div>
             <div class="mb-3">
+                <label class="form-label" asp-for="CourseTitle"></label>
+                <input class="form-control" asp-for="CourseTitle">
+                <span asp-validation-for="CourseTitle"></span>
+            </div>
+            <div class="mb-3">
                 <label class="form-label" asp-for="EmailAddress"></label>
                 <input class="form-control" asp-for="EmailAddress">
                 <span asp-validation-for="EmailAddress"></span>
