commit with background img

--- a/App/Views/Home/Index.cshtml
+++ b/App/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Hem";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Välkommen till WestCoast Education</h1>
-    <p>WestCoast Education är ett ledande utbildningsföretag i Göteborg. vi tillhandahåller tekniska utbildningar inom IT-området och har varit i utbildningsbranschen i 40 år. </p>
+<div class="welcome-container">
+    <div class="text-center">
+        <h1 class="display-4">Välkommen till WestCoast Education</h1>
+        <p>WestCoast Education är ett ledande utbildningsföretag i Göteborg. vi tillhandahåller tekniska utbildningar inom IT-området och har varit i utbildningsbranschen i 40 år. </p>
+   </div>
 </div>
+
