--- a/App/wwwroot/css/site.css
+++ b/App/wwwroot/css/site.css
@@ -24,6 +24,8 @@ a {
   border-color: #1861ac;
 }
 
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -56,20 +58,34 @@ button.accept-policy {
 html {
   position: relative;
   min-height: 100%;
+
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 50px; /* Vertically center the text there */
+  background-color: rgb(255, 255, 255);
 }
 
-/* .pb-3 {
-  margin: 50% auto;
-} */
+.welcome-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/students.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  z-index: -1;
+}
+
+.text-center {
+  position: relative;
+  top: 150px;
+  font-size: 20px;
+}
+
